# LangChain_A2A_Remote_Agent

./: .env.example  .gitignore  README.md  dashboard.html  main.py  pyproject.toml  test_all_client.py  test_capabilities.py  test_client.py  web_dashboard_server.py
agents/CalculatorAgent/: __main__.py  agent.py  agent_executor.py  agent_tools.py  llm_models.py  logger.py
agents/CalculatorAgent/auth/: __init__.py  base.py  bearer.py
agents/CalculatorAgent/auth/validators/: google.py  oauth.py  static.py
agents/CalculatorAgent/capabilities/: __init__.py  push_notifications.py
agents/CalculatorAgent/capabilities/multi_modal/: __init__.py  part_extractor.py
agents/CalculatorAgent/capabilities/opaque_execution/: __init__.py
agents/CalculatorAgent/capabilities/task_management/: __init__.py  file_store.py  ttl_cleanup.py
langchain-a2a-remote/: README.md  pyproject.toml  test.py
langchain-a2a-remote/remote_langchain_agent/: __init__.py  adapters.py  agent.py  artifacts.py  client.py  examples.py  exceptions.py  messages.py  state.py  streaming.py
