[project]
name = "remote-langchain-agent"
version = "0.1.0"
description = "LangChain equivalent of Google ADK's RemoteA2aAgent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.3.11",
    "langchain-core>=1.4.8",
    "a2a-sdk>=1.1.0",
    "httpx>=0.28.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["remote_langchain_agent"]
